[tool.poetry]
name = "cipher_ha2573"
version = "0.1.0"
description = "This package has cipher function that will do encrypt (or decrypt!) for strings"
authors = ["Hamidah Alatas"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
